Revert "feat: CFM_61 add class for fridge database table"
This reverts commit 83042bc260e772dfbd11e21ef1f9e8f354289522.
