# CommunityFridgeMapApi/api_contract.yaml
@@ -17,7 +17,7 @@ tags:
   description: Operations for the fridges
 
 paths:
-  /v1/fridges/{fridge_state}/{fridge_name}:
+  /v1/fridges/{state}/{fridge_name}:
     get:
       tags:
       - fridge
@@ -29,8 +29,8 @@ paths:
       - application/json
       parameters:
       - in: path
-        name: fridge_state
-        description: the fridge_state where the fridge is located
+        name: state
+        description: the state where the fridge is located
         required: true
         type: string
       - in: path
@@ -47,8 +47,6 @@ paths:
               $ref: '#/definitions/FridgeItemResponse'
         404:
           description: fridge was not found
-        500:
-          description: Unexpected Error
   /v1/fridges:
     get:
       tags:
@@ -64,7 +62,7 @@ paths:
         required: false
         type: string
       - in: query
-        name: fridge_state
+        name: state
         description: fridge state
         required: false
         type: string
@@ -77,8 +75,6 @@ paths:
               $ref: '#/definitions/FridgeLocationItem'
         404:
           description: fridges were not found
-        500:
-          description: Unexpected Error
     post:
       tags:
         - fridge
@@ -100,10 +96,6 @@ paths:
           description: Fridge was added successfully
         400:
           description: Bad Request
-        409:
-          description: Fridge already exists
-        500:
-          description: Unexpected Error
     put:
       tags:
         - fridge
@@ -123,13 +115,10 @@ paths:
       responses:
         200:
           description: Fridge was updated successfully
-        400:
-          description: Bad Request
         404:
           description: Fridge not found, unable to do an edit on a fridge that does not exist
-        500:
-          description: Unexpected Error
-
+        400:
+          description: Bad Request
           
   /v1/fridges/checkin:
     post:
@@ -155,8 +144,6 @@ paths:
           description: Fridge not found, unable to do a status update on a fridge that does not exist
         400:
           description: Bad Request
-        500:
-          description: Unexpected Error
 
   /v1/fridges/upload_image:
     post:
@@ -180,8 +167,6 @@ paths:
           description: Image was successfully uploaded
         400:
           description: Bad Request
-        500:
-          description: Unexpected Error
       
   /v1/fridges/tag:
     post:
@@ -204,11 +189,7 @@ paths:
         200:
           description: Tag was successfully added
         400:
-          description: Bad Request
-        409:
           description: Tag already exists
-        500:
-          description: Unexpected Error
     get:
       tags:
         - fridge
@@ -221,9 +202,6 @@ paths:
       responses:
         200:
           description: success
-        500:
-          description: Unexpected Error
-        
 
 
 definitions:
@@ -241,7 +219,7 @@ definitions:
     required:
       - lat
       - long
-      - fridge_state
+      - state
       - name
     properties:
       lat:
@@ -250,7 +228,7 @@ definitions:
       long:
         type: number
         example: -35.25463
-      fridge_state:
+      state:
         type: string
         example: NY
       name:
@@ -260,7 +238,7 @@ definitions:
   FridgeItemResponse:
     type: object
     required:
-      - fridge_state
+      - state
       - name
       - display_name
       - address
@@ -281,7 +259,7 @@ definitions:
       - check_in_status
       - check_in_image
     properties:
-      fridge_state:
+      state:
         type: string
         example: NY
       name:
@@ -351,13 +329,13 @@ definitions:
   FridgeCheckInRequest:
     type: object
     required:
-      - fridge_state
+      - state
       - fridge_name
       - notes
       - status
       - image
     properties:
-      fridge_state:
+      state:
         type: string
         example: ny
       fridge_name:
@@ -376,12 +354,12 @@ definitions:
   ImageUpload:
     type: object
     required:
-      - fridge_state
+      - state
       - fridge_name
       - image_binary
       - type
     properties:
-      fridge_state:
+      state:
         type: string
         example: ny
       fridge_name:
@@ -395,7 +373,7 @@ definitions:
   FridgeItemRequest:
     type: object
     required:
-      - fridge_state
+      - state
       - name
       - display_name
       - address
@@ -411,7 +389,7 @@ definitions:
       - long
       - profile_image
     properties:
-      fridge_state:
+      state:
         type: string
         example: NY
       name:
